--- a/pc_relais_app/pubspec.yaml
+++ b/pc_relais_app/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  mobile_scanner: ^3.5.5
+  mobile_scanner: ^6.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,27 +38,28 @@ dependencies:
   
   # State management
   provider: ^6.1.1
-  flutter_bloc: ^8.1.3
+  flutter_bloc: ^9.1.0
   
   # Navigation
-  go_router: ^13.2.0
+  go_router: ^15.0.0
   
   # UI components
   flutter_svg: ^2.0.10+1
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   
   # Firebase - uniquement pour l'authentification et les notifications
-  firebase_core: 2.15.1
-  firebase_auth: 4.7.2
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
   
   # Supabase - alternative à Firestore pour la base de données
-  supabase_flutter: ^1.10.25
-  postgrest: 1.5.2
+  supabase_flutter: ^2.8.4
+  postgrest: ^2.4.1
   
   # Storage
   shared_preferences: ^2.2.2
+  qr_flutter: ^4.1.0
   
   # Utilities
   uuid: ^4.3.3
@@ -66,14 +67,14 @@ dependencies:
   image_picker: ^1.0.7
   
   # Chat
-  firebase_messaging: 14.6.5
-  flutter_local_notifications: ^14.1.0
+  firebase_messaging: ^15.2.5
+  flutter_local_notifications: ^19.1.0
   
   # Payment
-  flutter_stripe: ^10.1.0
+  flutter_stripe: ^11.5.0
   
   # Charts and Visualization
-  fl_chart: ^0.66.2
+  fl_chart: ^0.71.0
 
 dev_dependencies:
   flutter_test:
